--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load staticfiles %}
 {% load bootstrap4 %}
 <html lang="en">
 <head>
@@ -6,11 +7,15 @@
     <title>Title</title>
     {% bootstrap_css %}
     {% bootstrap_javascript %}
+    <link rel="stylesheet" href="{% static "css/style.css" %}">
 </head>
 <body>
+<div class="">
+<div class="header"></div>
 <div class="container">
 {% block content %}
 {% endblock content %}
+</div>
 </div>
 </body>
 </html>
