--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,4 @@
-{% extends "blog/base.html" %}
+{% extends "base.html" %}
 {% load bootstrap4 %}
 {% block content %}
     <form method="post" class="form">
