--- a/templates/right_block.html
+++ b/templates/right_block.html
@@ -1,7 +1,7 @@
-{% extends 'base.html' %}
-{% load bootstrap4 %}
 {% block right_block %}
-    <div class="right-block">
+    <div class="col-lg-3">
+        <div class="right-block">
 
+        </div>
     </div>
 {% endblock right_block %}
