--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,17 +1,40 @@
 .header{
-    height: 50px;
+    height: 70px;
     background: #0c5460 fixed;
     margin-bottom: 70px;
+    position: fixed;
+    z-index: 9999999;
+    width: 100%;
 }
 
 .top-menu{
-    height: 80px;
     position: relative;
     border-bottom: 1px solid rgba(204,204,204,1);
+    margin-top: 70px;
+}
+
+.top-menu nav{
+    height: 40px;
 }
 
 .left-block, .right-block{
     background-color: #5e5e5e;
     width: inherit;
     height: 100%;
+    min-height: 400px;
+}
+
+.main{
+    position: absolute;
+    top: 130px;
+}
+
+footer{
+    background-color: #0c5460;
+    width: 100%;
+}
+
+footer p{
+    padding-top: 12px;
+    color: whitesmoke;
 }
