--- a/templates/left_block.html
+++ b/templates/left_block.html
@@ -1,7 +1,7 @@
-{% extends 'base.html' %}
-{% load bootstrap4 %}
 {% block left_block %}
+    <div class="col-lg-3">
         <div class="left-block">
 
         </div>
+    </div>
 {% endblock left_block %}
