--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,8 +20,8 @@
 .left-block, .right-block{
     background-color: #5e5e5e;
     width: inherit;
-    height: 100%;
     min-height: 400px;
+    height: 100vh;
 }
 
 .main{
@@ -32,9 +32,14 @@
 footer{
     background-color: #0c5460;
     width: 100%;
+    margin-top: 20px;
 }
 
 footer p{
     padding-top: 12px;
     color: whitesmoke;
+}
+
+.form{
+    margin: 0.7rem 3rem;
 }
