--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,15 @@
 {% load bootstrap4 %}
 
 {% block content %}
+<div class="container">
 {% for new in news %}
-    <h1>{{ new.title }}</h1>
+    <div class="row">
+    <div class="col-lg-12 block-news">
+        <h1><a href="{% url 'blog:post' new.id %}" >{{ new.title }}</a></h1>
     <p class="icon-bar"><i>Дата публикации: {{ new.news_date }}</i></p>
-    <div>{{ new.news_text }}</div>
+        <div>{{ new.news_text }}</div>
+    </div>
+    </div>
     {% endfor %}
+</div>
 {% endblock content %}
