--- a/blog/templates/blog/post.html
+++ b/blog/templates/blog/post.html
@@ -2,10 +2,11 @@
 {% block content %}
 <div class="container">
     <div class="row">
-    <div class="col-lg-12 block-news">
-        <h1>{{ post.title }}</h1>
-    <p class="icon-bar"><i>Дата публикации: {{ post.news_date }}</i></p>
-        <div>{% autoescape off %}{{ post.description|safe }}{% endautoescape %}</div>
+    <div class="col-lg-12 card p-3">
+        <h1 class="text-primary">{{ post.title }}</h1>
+        <h5 class="icon-ban-circle"><span class="badge badge-secondary p-2">{{ post.news_date }}</span></h5>
+
+        <div class="card-body">{% autoescape off %}{{ post.description|safe }}{% endautoescape %}</div>
     </div>
     </div>
 </div>
