--- a/blog/templates/blog/profile.html
+++ b/blog/templates/blog/profile.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 {% load bootstrap4 %}
 {% block content %}
-    <form method="post" class="form">
+    {{ files }}
+    <form method="post" class="form" enctype="multipart/form-data">
     {{ form.media }}
     {% csrf_token %}
     {% bootstrap_form form %}
