--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,9 @@
 {% for new in news %}
     <!--Вывод всех новостей-->
     <div class="row">
-    <div class="col-lg-12 block-news">
+    <div class="col-lg-12">
+    <div class="card mb-2">
+    <div class="card-body">
         <h5><span class="badge badge-secondary">{{ new.news_date }}</span></h5>
     <div class="media">
 
@@ -21,6 +23,8 @@
             <h1 class="mt-0 w-100"><a href="{% url 'blog:post' new.id %}" >{{ new.title }}</a></h1>
             {% autoescape off %}{{ new.description|striptags|truncatewords:30 }}{% endautoescape %}
         </div>
+    </div>
+    </div>
     </div>
     </div>
     </div>
