--- a/templates/base.html
+++ b/templates/base.html
@@ -11,36 +11,13 @@
     <script type="text/javascript" src="{% static "ckeditor/ckeditor/ckeditor.js" %}"></script>
     {% bootstrap_css %}
     {% bootstrap_javascript %}
+    <link href="https://fonts.googleapis.com/css?family=Lobster|Roboto&subset=latin,cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="{% static "css/style.css" %}">
 </head>
 <body>
-<div class="header">
-    <div class="top-menu">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
-            {% load menubuilder %}
-            {% menu headernavigation %}
+{% include 'header.html' %}
 
-            <a class="navbar-brand" href="/">Местный-<i>К</i></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar1" aria-controls="navbar1" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <ul class="navbar-nav mr-auto">
-
-            {% for item in menuitems %}
-
-      		<li class="nav-item">
-
-            <a href="{{ item.url }}" title="{{ item.title|escape }}"  class='nav-link'>
-                {{ item.title }}
-            </a>
-                </li>
-
-    {% endfor %}
-            </ul>
-    </nav>
-    </div>
-</div>
 <div class="container-fluid main">
 <div class="row">
 
