--- a/templates/index.html
+++ b/templates/index.html
@@ -9,14 +9,23 @@
     <div class="col-lg-12">
     <div class="card mb-2">
     <div class="card-body">
-        <h5><span class="badge badge-secondary">{{ new.news_date }}</span></h5>
+
     <div class="media">
 
         {% if new.news_image %}
-
-            <img src="/media/{{ new.news_image }}" class="mr-3 w-25">
+            <div class="card w-25 mr-3 text-white bg-primary">
+            <img src="/media/{{ new.news_image }}" class="mr-3 card-img-top">
+            <div class="card-body pt-3 pb-3 pl-1 pr-0 text-lg-center">
+                <h6 class="card-text mr-2 ml-0"><span class="p-2">{{ new.news_date }}</span></h6>
+            </div>
+            </div>
         {% else %}
-            <img src="{% static 'image/134703850_w640_h640_no_foto.png' %}" class="mr-3 w-25">
+            <div class="card w-25 mr-3 text-white bg-primary">
+            <img src="{% static 'image/134703850_w640_h640_no_foto.png' %}" class="mr-3 card-img-top">
+            <div class="card-body pt-3 pb-3 pl-1 pr-0 text-lg-center">
+                <h6 class="card-text mr-2 ml-0"><span class="p-2">{{ new.news_date }}</span></h6>
+            </div>
+            </div>
         {% endif %}
 
         <div class="media-body">
